--- a/src/main/resources/templates/vets/vetList.html
+++ b/src/main/resources/templates/vets/vetList.html
@@ -8,50 +8,55 @@
 <h2>Veterinarians</h2>
 
 <table id="vets" class="table table-striped">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Specialties</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="vet : ${listVets}">
-    <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
-    <td><span th:each="specialty : ${vet.specialties}"
-              th:text="${specialty.name + ' '}"/> <span
-      th:if="${vet.nrOfSpecialties == 0}">none</span></td>
-  </tr>
-  </tbody>
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Specialties</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${listVets}">
+        <td th:text="|${vet.firstName} ${vet.lastName}|"></td>
+        <td>
+            <span th:each="specialty : ${vet.specialties}" th:text="|${specialty.name} |"></span>
+            <span th:if="${vet.nrOfSpecialties == 0}">none</span>
+        </td>
+    </tr>
+    </tbody>
 </table>
 
 <div th:if="${totalPages > 1}">
-  <span>Pages:</span>
-  <span>[</span>
-  <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-      <a th:if="${currentPage != i}" th:href="@{'/vets.html/?page=' + ${i}}">[[${i}]]</a>
+    <span>Pages:</span>
+    <span>[</span>
+    <span th:each="i: ${#numbers.sequence(1, totalPages)}">
+      <a th:if="${currentPage != i}" th:href="@{/vets(page=${i})}">[[${i}]]</a>
       <span th:unless="${currentPage != i}">[[${i}]]</span>
-    </span>
-  <span>]&nbsp;</span>
-  <span>
-      <a th:if="${currentPage > 1}" th:href="@{'/vets.html/?page=1'}" title="First"
+  </span>
+    <span>]&nbsp;</span>
+
+    <span>
+      <a th:if="${currentPage > 1}" th:href="@{/vets(page=1)}" title="First"
          class="fa fa-fast-backward"></a>
       <span th:unless="${currentPage > 1}" title="First" class="fa fa-fast-backward"></span>
-    </span>
-  <span>
-      <a th:if="${currentPage > 1}" th:href="@{'/vets.html/?page=' + ${currentPage - 1}}" title="Previous"
+  </span>
+
+    <span>
+      <a th:if="${currentPage > 1}" th:href="@{/vets(page=${currentPage - 1})}" title="Previous"
          class="fa fa-step-backward"></a>
       <span th:unless="${currentPage > 1}" title="Previous" class="fa fa-step-backward"></span>
-    </span>
-  <span>
-      <a th:if="${currentPage < totalPages}" th:href="@{'/vets.html/?page=' + ${currentPage + 1}}" title="Next"
+  </span>
+
+    <span>
+      <a th:if="${currentPage < totalPages}" th:href="@{/vets(page=${currentPage + 1})}" title="Next"
          class="fa fa-step-forward"></a>
       <span th:unless="${currentPage < totalPages}" title="Next" class="fa fa-step-forward"></span>
-    </span>
-  <span>
-      <a th:if="${currentPage < totalPages}" th:href="@{'/vets.html/?page=' + ${totalPages}}" title="Last"
+  </span>
+
+    <span>
+      <a th:if="${currentPage < totalPages}" th:href="@{/vets(page=${totalPages})}" title="Last"
          class="fa fa-fast-forward"></a>
       <span th:unless="${currentPage < totalPages}" title="Last" class="fa fa-fast-forward"></span>
-    </span>
+  </span>
 </div>
 </body>
 </html>
