--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,11 @@
 <html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 
   <body>
-
-    <h2 th:text="#{welcome}">Welcome</h2>
-    <div class="row">
+  <h2 style="font-size: 40px; text-align: center; font-weight: bold;">FISA인증 최우수 동물병원</h2>
+  <br />
+  <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
+          <img class="img-responsive center-image" src="../static/resources/images/pet-clinic.png" th:src="@{/resources/images/pet-clinic.png}"/>
         </div>
     </div>
 
