--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,9 +3,11 @@
 <html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'error')}">
 
   <body>
-    <img src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
-    <h2>Something happened...</h2>
-    <p th:text="${message}">Exception message</p>
+    <img src="../static/resources/images/error-image.png" th:src="@{/resources/images/error-image.png}" class="center-image"/>
+    <br />
+    <h2 style="font-size: 40px; text-align: center; font-weight: bold;">수의사 지섭이가 아파요~ </h2>
+    <br/>
+    <p style="text-align : center;" th:text="${message}">Exception message</p>
   </body>
 
 </html>
